--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,6 +34,7 @@ repositories {
     jcenter()
     maven {
         url "http://maven.google.com/"
+        allowInsecureProtocol = true
     }
 }
 
